--- a/plan/templates/plan/create_step1.html
+++ b/plan/templates/plan/create_step1.html
@@ -1,179 +1,170 @@
 {% extends 'base.html' %}
 {% load avatartags %}
 {% block css_link %}
-    <!-- Datetimepicker core CSS -->
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}external/datetimepicker/css/bootstrap-datetimepicker.css">
+<!-- Datetimepicker core CSS -->
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}external/datetimepicker/css/bootstrap-datetimepicker.css">
 
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}create_step1.css">
-    {% endblock %}
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}create_step1.css">
+{% endblock %}
 
 {% block main_content %}
-    <!-- =====MAIN CONTENT===== -->
+<div class="row">
+  <div class="col-sm-7">
+    <div class="row CT-picker" id="city-picker">
+      <div class="page-header CT-picker-heading">
+        <form class="form" id="plan-form" role="form" method="POST" style="width: 50%;">
+           {% csrf_token %}
+             <legend>创建旅行计划</legend>
+              <div class="form-group" id="plan-title">
+                <label for="id-title" class="control-label">标题</label>
+                <div class="">
+                  <input type="text" class="form-control" id="id-title" name="title" placeholder="旅行计划的标题" required>
+                </div>
+              </div><!-- /plan title -->
 
-    <main class="container-fluid">
-      
-      <div class="row">
-        <div class="col-sm-7">
-          <div class="row CT-picker" id="city-picker">
-            <div class="page-header CT-picker-heading">
-              <form class="form" id="plan-form" role="form" method="POST" style="width: 50%;">
-                 {% csrf_token %}
-                   <legend>创建旅行计划</legend>
-          <div class="form-group" id="plan-title">
-            <label for="id-title" class="control-label">标题</label>
+            <div class="form-group" id="plan-leaving-date">
+            <label for="id-leaving-date" class="control-label">出发日期</label>
             <div class="">
-              <input type="text" class="form-control" id="id-title" name="title" placeholder="旅行计划的标题" required>
+              <div class="input-group date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="id-leaving-date" data-link-format="yyyy-mm-dd">
+                <input class="form-control" size="16" type="text" value="" readonly>
+                <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+              </div>
+              <input type="hidden" id="id-leaving-date" name="leaving_date" value="" form="plan-form">
             </div>
-          </div><!-- /plan title -->
+          </div><!-- /plan leaving date -->
 
-                  <div class="form-group" id="plan-leaving-date">
-                  <label for="id-leaving-date" class="control-label">出发日期</label>
-                  <div class="">
-                    <div class="input-group date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="id-leaving-date" data-link-format="yyyy-mm-dd">
-                      <input class="form-control" size="16" type="text" value="" readonly>
-                      <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-                      <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                    </div>
-                    <input type="hidden" id="id-leaving-date" name="leaving_date" value="" form="plan-form">
-                  </div>
-                </div><!-- /plan leaving date -->
-
-
-
-
-                <div class="form-group" id="plan-return-date">
-                  <label for="id-return-date" class="control-label">返回日期</label>
-                  <div class="">
-                    <div class="input-group date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="id-return-date" data-link-format="yyyy-mm-dd">
-                      <input class="form-control" size="16" type="text" value="" readonly>
-                      <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-                      <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                    </div>
-                    <input type="hidden" id="id-return-date" name="return_date" value="" form="plan-form">
-                  </div>
-                </div><!-- /plan return date -->
-
-                <div class="form-group" id="plan-leaving-transportation">
-                  <label for="id-leaving-transportation" class="control-label">出行工具</label>
-                  <div class="">
-                     {{ form.leaving_transportation }}
-                  </div>
-                </div><!-- /plan leaving transportation -->
-
-                <div class="form-group" id="plan-return-transportation">
-                  <label for="id-return-transportation" class="control-label">返程工具</label>
-                  <div class="">
-                    {{ form.return_transportation }}
-                  </div>
-                </div><!-- /plan return transportation -->
-
-                <div class="form-group" id="plan-destination-city">
-                  <label for="id-destination-city" class="control-label">目的地</label>
-                  <div class="">
-
-                     {% for p in province_list %}
-
-                    {{ p }}
-                    {% endfor %}
-                  </div>
-                </div><!-- /plan destination city -->
-
-                <button type="submit" class="btn btn-default">提交</button>
-              </form>
-
-              <h3>asdfsadfsa</h3>
-              <small>To see example with events navigate to march 2013</small>
-            </div><!-- .CT-picker-heading -->
-
-            <div class="col-sm-3 CT-picker-item city-item">
-              <div class="thumbnail CT-picker-item-body">
-                <img src="imgs/avatar/zr.jpg" alt="..." class="img-rounded CT-picker-item-img">
-                <div class="caption CT-picker-item-detail">
-                  <h4>上海</h4>
-                  <input type="checkbox" id="id-destination-city" name="destination_city" value="22" form="plan-form">
-                </div>
+          <div class="form-group" id="plan-return-date">
+            <label for="id-return-date" class="control-label">返回日期</label>
+            <div class="">
+              <div class="input-group date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="id-return-date" data-link-format="yyyy-mm-dd">
+                <input class="form-control" size="16" type="text" value="" readonly>
+                <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
               </div>
-            </div><!-- #city-item -->
+              <input type="hidden" id="id-return-date" name="return_date" value="" form="plan-form">
+            </div>
+          </div><!-- /plan return date -->
 
-            <div class="col-sm-3 CT-picker-item city-item">
-              <div class="thumbnail CT-picker-item-body">
-                <img src="imgs/avatar/zr.jpg" alt="..." class="img-rounded CT-picker-item-img">
-                <div class="caption CT-picker-item-detail">
-                  <h4>上海</h4>
-                  <input type="checkbox">
-                </div>
-              </div>
-            </div><!-- #city-item -->
+          <div class="form-group" id="plan-leaving-transportation">
+            <label for="id-leaving-transportation" class="control-label">出行工具</label>
+            <div class="">
+               {{ form.leaving_transportation }}
+            </div>
+          </div><!-- /plan leaving transportation -->
 
-            <div class="col-sm-3 CT-picker-item city-item">
-              <div class="thumbnail CT-picker-item-body">
-                <img src="imgs/avatar/zr.jpg" alt="..." class="img-rounded CT-picker-item-img">
-                <div class="caption CT-picker-item-detail">
-                  <h4>上海</h4>
-                  <input type="checkbox">
-                </div>
-              </div>
-            </div><!-- #city-item -->
+          <div class="form-group" id="plan-return-transportation">
+            <label for="id-return-transportation" class="control-label">返程工具</label>
+            <div class="">
+              {{ form.return_transportation }}
+            </div>
+          </div><!-- /plan return transportation -->
 
-          </div><!-- #city-picker -->
-        </div>
-        <div class="col-sm-5">
-          <div class="row CT-picker" id="friend-picker">
-            <div class="page-header CT-picker-heading">
-              选择好友
-              <div class="form-inline">
-                <div class="form-group">
-                  <div class="">
-                    <div class="checkbox" id="plan-participants-can-edit">
-                      <label for="id-participants-can-edit">
-                        <input type="checkbox" id="id-participants-can-edit" name="participants_can_edit" form="plan-form"> 同行人可修改此份旅行计划
-                      </label>
-                    </div>
-                  </div>
-                </div><!-- /plan participants can edit -->
+          <div class="form-group" id="plan-destination-city">
+            <label for="id-destination-city" class="control-label">目的地</label>
+            <div class="">
+              <select class="form-control" id="id-destination-city" name="destination_city" form="plan-form" required>
+                {% for p in province_list %}
+                <option value="{{ p.id }}">{{ p }}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div><!-- /plan destination city -->
 
-                <div class="form-group">
-                  <div class="col-sm-offset-2">
-                    <div class="checkbox" id="plan-is-public">
-                      <label for="id-is-public">
-                        <input type="checkbox" id="id-is-public" name="is_public" form="plan-form"> 分享此份旅行计划
-                      </label>
-                    </div>
-                  </div>
-                </div><!-- /plan is public -->
-              </div>
-            </div><!-- .CT-picker-heading -->
+          <button type="submit" class="btn btn-default">提交</button>
+        </form>
 
-            {%  for f in friends %}
-            <div class="col-sm-3 CT-picker-item friend-item">
-              <div class="CT-picker-item-body">
-                <input name="participants" type="checkbox" class="CT-item-checkbox" form="plan-form" value="{{ f.id }}">
-                <div class="CT-item-check-icon">
-                  <span class="glyphicon glyphicon-ok-circle"></span>
-                </div>
-                <img src="{% get_avatar f.user 100 %}" alt="" class="img-circle CT-picker-item-img">
-                <div class="CT-picker-item-detail text-center">
-                  <p>{{ f }}</p>
-                </div>
-              </div>
-            </div><!-- #friend-item -->
-            {% endfor %}
-          </div><!-- #friend-picker -->
-        </div>
+        <h3>asdfsadfsa</h3>
+        <small>To see example with events navigate to march 2013</small>
+      </div><!-- .CT-picker-heading -->
+      
+      <div class="CT-picker-body" id="city-picker-body">
+        <div class="col-sm-3 CT-picker-item city-item">
+          <div class="thumbnail CT-picker-item-body">
+            <img src="imgs/avatar/zr.jpg" alt="..." class="img-rounded CT-picker-item-img">
+            <div class="caption CT-picker-item-detail">
+              <h4>上海</h4>
+              <input type="checkbox" id="id-destination-city" name="destination_city" value="22" form="plan-form">
+            </div>
+          </div>
+        </div><!-- #city-item -->
+
+        <div class="col-sm-3 CT-picker-item city-item">
+          <div class="thumbnail CT-picker-item-body">
+            <img src="imgs/avatar/zr.jpg" alt="..." class="img-rounded CT-picker-item-img">
+            <div class="caption CT-picker-item-detail">
+              <h4>上海</h4>
+              <input type="checkbox">
+            </div>
+          </div>
+        </div><!-- #city-item -->
+
+        <div class="col-sm-3 CT-picker-item city-item fade">
+          <div class="thumbnail CT-picker-item-body">
+            <img src="imgs/avatar/zr.jpg" alt="..." class="img-rounded CT-picker-item-img">
+            <div class="caption CT-picker-item-detail">
+              <h4>上海</h4>
+              <input name="city" type="checkbox" class="CT-item-checkbox" form="plan-form" value="">
+            </div>
+          </div>
+        </div><!-- #city-item -->
       </div>
-    </main>
+    </div><!-- #city-picker -->
+  </div>
 
+  <div class="col-sm-5">
+    <div class="row CT-picker" id="friend-picker">
+      <div class="page-header CT-picker-heading">
+        选择好友
+        <div class="form-inline">
+          <div class="form-group">
+            <div class="">
+              <div class="checkbox" id="plan-participants-can-edit">
+                <label for="id-participants-can-edit">
+                  <input type="checkbox" id="id-participants-can-edit" name="participants_can_edit" form="plan-form"> 同行人可修改此份旅行计划
+                </label>
+              </div>
+            </div>
+          </div><!-- /plan participants can edit -->
 
+          <div class="form-group">
+            <div class="col-sm-offset-2">
+              <div class="checkbox" id="plan-is-public">
+                <label for="id-is-public">
+                  <input type="checkbox" id="id-is-public" name="is_public" form="plan-form"> 分享此份旅行计划
+                </label>
+              </div>
+            </div>
+          </div><!-- /plan is public -->
+        </div>
+      </div><!-- .CT-picker-heading -->
+
+      {%  for f in friends %}
+      <div class="col-sm-3 CT-picker-item friend-item">
+        <div class="CT-picker-item-body">
+          <input name="participants" type="checkbox" class="CT-item-checkbox" form="plan-form" value="{{ f.id }}">
+          <div class="CT-item-check-icon">
+            <span class="glyphicon glyphicon-ok-circle"></span>
+          </div>
+          <img src="{% get_avatar f.user 100 %}" alt="" class="img-circle CT-picker-item-img">
+          <div class="CT-picker-item-detail text-center">
+            <p>{{ f }}</p>
+          </div>
+        </div>
+      </div><!-- #friend-item -->
+      {% endfor %}
+    </div><!-- #friend-picker -->
+  </div>
+</div>
 {% endblock %}
 
 {% block js %}
-     <script type="text/javascript" src="{{ STATIC_URL }}external/datetimepicker/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}external/datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}external/datetimepicker/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}external/datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"></script>
 
-    <!-- Form Validator core CSS -->
-    <script type="text/javascript" src="{{ STATIC_URL }}external/bootstrapvalidator/js/bootstrapValidator.js"></script>
-    <!-- Custom Javascript -->
-    <script type="text/javascript" src="{{ STATIC_URL }}create_step1.js"></script>
-
+<!-- Form Validator core CSS -->
+<script type="text/javascript" src="{{ STATIC_URL }}external/bootstrapvalidator/js/bootstrapValidator.js"></script>
+<!-- Custom Javascript -->
+<script type="text/javascript" src="{{ STATIC_URL }}create_step1.js"></script>
 {% endblock %}
 
